[package]
name = "art-verse"
version = "0.1.0"
authors = ["Krystian Muchla <kmuchla69@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
log = "0.4.20"

[dependencies.web-sys]
version = "0.3.67"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'DomTokenList',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlElement',
  'HtmlInputElement',
  'ImageData',
  'InputEvent',
  'MouseEvent',
  'Window',
]
